@@ -1091,7 +1091,7 @@ public abstract class WSHandler {
             );
         }
         try {
-            cbHandler = cbClass.newInstance();
+            cbHandler = cbClass.getDeclaredConstructor().newInstance();
         } catch (Exception e) {
             throw new WSSecurityException(WSSecurityException.ErrorCode.FAILURE, e,
                     "empty",
